--- a/.github/workflows/snake.yaml
+++ b/.github/workflows/snake.yaml
@@ -27,7 +27,7 @@ jobs:
       - name: generate github-contribution-grid-snake.svg
         uses: Platane/snk@master
         with:
-          github_user_name: Ysrbolles
+          github_user_name: meriem-mounchid
           svg_out_path: dist/github-contribution-grid-snake.svg
 
       # push the content of <build_dir> to a branch
